src/test/run-pass/foreign-mod-unused-const.rs
#[nolink]
extern mod foo {
    const errno: int;
}

fn main() {
}

